--- a/2017/01.md
+++ b/2017/01.md
@@ -1,14 +1,10 @@
 # 2017.01
 
-## 04
-
-### Swift中lazy作惰性求值
+## 1. Swift中lazy作惰性求值
 
 函数式编程中有惰性求值的概念，即一次计算在真正需要时才执行，尽可能推迟求解表达式。
 
-假如我们有一个数组，我们对每个元素作`element*2`的map操作，获取其中某一个元素，我们会如代码清单4-1-1处理:
-
-**代码清单4-1-1**
+假如我们有一个数组，我们对每个元素作`element*2`的map操作，获取其中某一个元素，我们会如下代码处理:
 
 ```swift
 let array = [1, 2, 4, 5, 3, 7]
@@ -18,9 +14,7 @@ print(element)
 
 这个计算对每个元素都*2，最后我们只取了其中一个值，也就是说在这个场景中另外5次计算是无意义的。
 
-这时使用惰性求值就可以避免这算浪费。我们知道Swift中有个lazy关键字，如果用来修饰属性之类的，可以实现属性的惰性求值。同样，Swift扩展了LazySequenceProtocol协议，提供了一个lazy属性，用于处理map，filter等操作的惰性求值，定义如代码清单4-1-2所示：
-
-**代码清单4-1-2**
+这时使用惰性求值就可以避免这算浪费。我们知道Swift中有个lazy关键字，如果用来修饰属性之类的，可以实现属性的惰性求值。同样，Swift扩展了LazySequenceProtocol协议，提供了一个lazy属性，用于处理map，filter等操作的惰性求值，定义如下代码所示：
 
 ```swift
 /// Avoid creating multiple layers of `LazySequence` wrapper.
@@ -32,9 +26,7 @@ extension LazySequenceProtocol {
 }
 ```
 
-所以，上面这个例子如果要实现惰性求值，则可以如代码清单4-1-3处理：
-
-**代码清单4-1-3**
+所以，上面这个例子如果要实现惰性求值，则可以如下代码处理：
 
 ```swift
 let array = [1, 2, 4, 5, 3, 7]
@@ -44,13 +36,9 @@ print(element)
 
 我们在Playground中可以看到，整个计算中实际只执行了一次*2操作。
 
-## 05
+## 2. Swift stride操作
 
-### Swift stride操作
-
-在Swift中，如果我们想创建一个一定步长的数组，可以如代码清单5-1-1操作。
-
-**代码清单5-1-1**
+在Swift中，如果我们想创建一个一定步长的数组，可以如下代码操作：
 
 ```swift
 var array: [Double] = []
@@ -59,9 +47,7 @@ for value in 0..<10 {
 }
 ```
 
-不过如果想在某个区间创建这样一个序列的话，会比较麻烦。为此，Swift提供了一个便捷函数：`stride`，可以在某个区间内创建一个任意可变步长的序列，这个步长可以是任意值。所以上面这个问题的实现可以如代码清单5-1-2处理，
-
-**代码清单5-1-2**
+不过如果想在某个区间创建这样一个序列的话，会比较麻烦。为此，Swift提供了一个便捷函数：`stride`，可以在某个区间内创建一个任意可变步长的序列，这个步长可以是任意值。所以上面这个问题的实现可以如下代码处理：
 
 ```swift
 let array = stride(from: 0, to: 3, by: 0.3).map {
@@ -69,9 +55,7 @@ let array = stride(from: 0, to: 3, by: 0.3).map {
 }
 ```
 
-实际上，`stride`的产生的序列如代码清单5-1-3：
-
-**代码清单5-1-3**
+实际上，`stride`的产生的序列如下代码：
 
 `start, start + stride, start + 2 * stride, …, start + n * stride`
 
@@ -82,11 +66,9 @@ let array = stride(from: 0, to: 3, by: 0.3).map {
 
 `stride`函数与`map`配合起来可以做一些有意思的事情。
 
-### static方法与class方法的区别
+## 3. static方法与class方法的区别
 
-在Swift中，`static`和`class`这两个关键字都可以修饰类的方法，以表明这个方法是一个类方法。不过这两者稍微有一些区别：`class`修饰的类方法可以被子类重写，而`static`修饰的类方法则不能。如代码清单5-2-1所示：
-
-**代码清单5-2-1**
+在Swift中，`static`和`class`这两个关键字都可以修饰类的方法，以表明这个方法是一个类方法。不过这两者稍微有一些区别：`class`修饰的类方法可以被子类重写，而`static`修饰的类方法则不能。如下代码所示：
 
 ```swift
 class A {
@@ -115,13 +97,9 @@ B.method1()
 B.method2()
 ```
 
-## 06
+## 4. Swift中的函数值
 
-### Swift中的函数值
-
-我们知道在Swift中，函数是一等公民，即函数也是一种类型，可充当参数、返回值等角色，当然也可以定义函数类型的常量/变量。利用这个特性，在某些场景下可以简化我们的代码，如代码清单6-1-1所示：
-
-**代码清单6-1-1**
+我们知道在Swift中，函数是一等公民，即函数也是一种类型，可充当参数、返回值等角色，当然也可以定义函数类型的常量/变量。利用这个特性，在某些场景下可以简化我们的代码，如下代码所示：
 
 ```swift
 let setInt: (Int, String) -> Void = UserDefaults.standard.set
@@ -131,11 +109,9 @@ setInt(10, "key")
 print(getInt("key"))
 ```
 
-### Array.contains操作
+## 5. Array.contains操作
 
-Swift中判断一个`Array`中是否包含某个元素，我们可以使用`contains`方法，如代码清单6-2-1所示：
-
-**代码清单6-2-1**
+Swift中判断一个`Array`中是否包含某个元素，我们可以使用`contains`方法，如下代码所示：
 
 ```swift
 let array = [2, 5, 6, 7, 19, 40]
@@ -143,9 +119,7 @@ let array = [2, 5, 6, 7, 19, 40]
 array.contains(10)				// false
 ```
 
-不过这个方法要求数组中的元素类型实现了`Equatable`协议，否则无法使用，如代码清单6-2-2所示：
-
-**代码清单6-2-2**
+不过这个方法要求数组中的元素类型实现了`Equatable`协议，否则无法使用，如下代码所示：
 
 ```swift
 enum Animal {
@@ -159,15 +133,11 @@ let hasCat = animals.contains(.cat(100))	// 编译器错误
 
 还好Swift为我们提供了另一个`contains`方法，可以自定义谓词条件作为判断依据，其定义如下：
 
-**代码清单6-2-3**
-
 ```swift
 public func contains(where predicate: (Element) throws -> Bool) rethrows -> Bool
 ```
 
-这个方法会查看数组是否包含满足给定的谓词条件的元素。可以看到这个方法是一个高阶函数，其参数是一个尾随闭包，在闭包内我们可以根据实际需要来实现我们自己的判断。所以上面的判断可以如代码清单6-2-4实现：
-
-**代码清单6-2-4**
+这个方法会查看数组是否包含满足给定的谓词条件的元素。可以看到这个方法是一个高阶函数，其参数是一个尾随闭包，在闭包内我们可以根据实际需要来实现我们自己的判断。所以上面的判断可以如下代码实现：
 
 ```swift
 enum Animal {
@@ -186,9 +156,7 @@ let hasCat = animals.contains { animal in
 }
 ```
 
-当然，对于元素类型实现了`Equatable`协议的数组，也可以使用这个方法。可以自定义谓词条件，查看数组是否有满足此条件的元素，如代码清单6-2-5所示：
-
-**代码清单6-2-5**
+当然，对于元素类型实现了`Equatable`协议的数组，也可以使用这个方法。可以自定义谓词条件，查看数组是否有满足此条件的元素，如下代码所示：
 
 ```swift
 let array = [2, 5, 6, 7, 19, 40]
@@ -198,13 +166,9 @@ array.contains { (element) -> Bool in
 }
 ```
 
-## 07
+## 6. NSRecursiveLock递归锁的使用
 
-### NSRecursiveLock递归锁的使用
-
-`NSRecursiveLock`定义的是一个递归锁，这个锁可以被同一线程多次请求，而不会引起死锁。它主要是用在循环或递归操作中。我们先来看代码清单7-1-1的示例：
-
-**代码清单7-1-1**
+`NSRecursiveLock`定义的是一个递归锁，这个锁可以被同一线程多次请求，而不会引起死锁。它主要是用在循环或递归操作中。我们先来看下面代码示例：
 
 ```swift
 let lock = NSLock()
@@ -235,9 +199,7 @@ DispatchQueue.global().async {
 }
 ```
 
-这段代码是一个典型的死锁情况。在我们的线程中，`RecursiveMethod`是递归调用的。所以每次进入这个闭包函数时，都会去加一次锁，而从第二次开始，由于锁已经被使用了且没有解锁，所以它需要等待锁被解除，这样就导致了死锁，线程被阻塞住了。调试器中会输出信息如代码清单7-1-2所示：
-
-**代码清单7-1-2**
+这段代码是一个典型的死锁情况。在我们的线程中，`RecursiveMethod`是递归调用的。所以每次进入这个闭包函数时，都会去加一次锁，而从第二次开始，由于锁已经被使用了且没有解锁，所以它需要等待锁被解除，这样就导致了死锁，线程被阻塞住了。调试器中会输出信息如下代码所示：
 
 ```swift
 start
@@ -248,9 +210,7 @@ start
 
 在这种情况下，我们就可以使用`NSRecursiveLock`。它可以允许同一线程多次加锁，而不会造成死锁。递归锁会跟踪它被`lock`的次数。每次成功的`lock`都必须平衡调用`unlock`操作。只有达到这种平衡，锁最后才能被释放，以供其它线程使用。
 
-所以，使用`NSRecursiveLock`对图1的代码进行一下改造，这样，程序就能正常运行了，如代码清单7-1-3所示。
-
-**代码清单7-1-3**
+所以，使用`NSRecursiveLock`对图1的代码进行一下改造，这样，程序就能正常运行了，如下代码所示：
 
 ```swift
 let lock = NSRecursiveLock()
@@ -290,16 +250,11 @@ DispatchQueue.global().async {
 // end
 ```
 
-## 08
-
-### __attribute__((noescape))属性
+## 7. __attribute__((noescape))属性
 
 在Cocoa中，大部分API的`closure/block`参数都是逃逸的(`escaping`)，因此，在swift中调用Objective-C的API时，编译器会自动在Objective-C API中的`closure/block`参数前面添加`@escaping`。
 
-在Objective-C中，如果我们不希望`block`是逃逸的，则可以在参数前面添加`((noescape))`属性，如
-代码清单8-1-1所示。另外也可以用系统提供的`NS_NOESCAPE/CF_NOESCAPE`宏。
-
-**代码清单8-1-1**
+在Objective-C中，如果我们不希望`block`是逃逸的，则可以在参数前面添加`((noescape))`属性，如下代码所示。另外也可以用系统提供的`NS_NOESCAPE/CF_NOESCAPE`宏。
 
 ```objc
 // Handler.h
@@ -344,9 +299,7 @@ typedef void (^CompleteHandler)(void);
 @end
 ```
 
-不过在Xcode 8下测试了一下，编译器对这个属性貌似是无感的，在Siwft中调用，无论有没有加`((noescape))`属性，都不会有错误或警告提示，如代码清单8-1-2所示。
-
-**代码清单8-1-2**
+不过在Xcode 8下测试了一下，编译器对这个属性貌似是无感的，在Siwft中调用，无论有没有加`((noescape))`属性，都不会有错误或警告提示，如下代码所示：
 
 ```swift
 class HandlerCaller: NSObject {
@@ -368,16 +321,14 @@ class HandlerCaller: NSObject {
 
 另外，对`C API`的处理也是相同的。
 
-#### 参考
+### 参考
 
 1. [Make non-escaping closures the default](https://github.com/apple/swift-evolution/blob/master/proposals/0103-make-noescape-default.md)
 2. [Add @noescape to public library API](https://github.com/apple/swift-evolution/blob/master/proposals/0012-add-noescape-to-public-library-api.md)
 
-### Swift中的escaping closure
+## 8. Swift中的escaping closure
 
-在Swift中使用`@escaping`来修饰一个逃逸闭包(`Escaping Closures`)，即闭包作为参数传到一个函数中时，这个闭包可以不在函数中调用，而在函数返回之后的某个时间再调用。如可以在函数中将闭包赋值给一个类的成员变量，或者保存在一个数组中，以备后续异步调用。这类闭包参数需要使用`@escaping`来修饰，否则会报错，如代码清单8-2-1所示。
-
-**代码清单8-2-1**
+在Swift中使用`@escaping`来修饰一个逃逸闭包(`Escaping Closures`)，即闭包作为参数传到一个函数中时，这个闭包可以不在函数中调用，而在函数返回之后的某个时间再调用。如可以在函数中将闭包赋值给一个类的成员变量，或者保存在一个数组中，以备后续异步调用。这类闭包参数需要使用`@escaping`来修饰，否则会报错，如下代码所示：
 
 ```swift
 var handlers: [(Int) -> Void] = []
@@ -387,9 +338,7 @@ func complete(handler: (Int) -> Void) {
 }
 ```
 
-需要注意的一个问题是，如果在类中使用逃逸闭包，且闭包内要调用实例对象的属性或方法时，必须显式地引用`self`，否则会报错，如代码清单8-2-2所示。
-
-**代码清单8-2-2**
+需要注意的一个问题是，如果在类中使用逃逸闭包，且闭包内要调用实例对象的属性或方法时，必须显式地引用`self`，否则会报错，如下代码所示：
 
 ```swift
 class A {
@@ -407,9 +356,7 @@ class A {
 }
 ```
 
-## 09
-
-### Traits
+## 9. Traits
 
 `Traits`是一个可以实现实时更新代码，而不需要重新运行程序就可以看到效果的库，效果如下图所示，源码地址在[这里](https://github.com/krzysztofzablocki/Traits)。
 
@@ -427,9 +374,7 @@ class A {
 	
 	![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/09-1-3.png?raw=true)
 
-## 10
-
-### Injection代码注入
+## 10. Injection代码注入
 
 `Injection`是johnno开发的一个`Xcode`插件，允许我们将代码实现更快注入到模拟器运行的程序或macOS程序。原先可以通过`Alcatraz`安装到Xcode中，不过现在是独立的App了。可以在[这里](http://johnholdsworth.com/Injection.app.zip)下载安装。启动后会出现在屏幕顶部的工具栏中，如下图所示。
 
@@ -452,9 +397,7 @@ class A {
 [文档](https://johntmcintosh.com/blog/2016/10/03/code-injection-ios)
 
 
-## 11
-
-### 路径填充规则
+## 11. 路径填充规则
 
 Quartz在填充区域时有两套规则：`非零缠绕数规则(nonzero windingnumber rule)`和`偶数-奇数规则(Even-odd)`。
 
@@ -480,22 +423,18 @@ Quartz在填充区域时有两套规则：`非零缠绕数规则(nonzero winding
 
 填充规则除了这两种，还有`Positive`和`Negative`，有兴趣的可以研究一下。 
 
-参考：
+### 参考
 
 1. [Nonzero-rule](https://en.wikipedia.org/wiki/Nonzero-rule)
 2. [Even–odd rule](https://en.wikipedia.org/wiki/Even%E2%80%93odd_rule)
 3. [Quartz 2D编程指南之三：路径(Path)](http://southpeak.github.io/2014/11/16/quartz2d-3/)
 4. [PolyFillType](http://www.angusj.com/delphi/clipper/documentation/Docs/Units/ClipperLib/Types/PolyFillType.htm)
 
-## 12
-
-### filter与flatMap过滤nil
+## 12. filter与flatMap过滤nil
 
 使用高阶函数过滤一个数组中的nil可以有两种方法：`filter`和`flatMap`。
 
-`filter`方法如代码清单12-1-1所示：
-
-**代码清单12-1-1**
+`filter`方法如下代码所示：
 
 ```swift
 let array: [Int?] = [1, 2, 3, 5, nil, 9]
@@ -507,9 +446,7 @@ let result = array.filter { element in
 print(result)		// [Optional(1), Optional(2), Optional(3), Optional(5), Optional(9)]
 ```
 
-`flatMap`方法如代码清单12-1-2所示：
-
-**代码清单12-1-2**
+`flatMap`方法如下代码所示：
 
 ```swift
 let array: [Int?] = [1, 2, 3, 5, nil, 9]
@@ -522,11 +459,9 @@ print(result)		// [1, 2, 3, 5, 9]
 
 从输出可以看出，`filter`返回的仍然是一个`Optional`数组，而`flatMap`返回的是一个非`Optional`数组。一般推荐使用第二种方法。
 
-### NSRecursiveLock.lock(before:)
+## 13. NSRecursiveLock.lock(before:)
 
-`NSRecursiveLock`递归锁提供了一个方法`lock(before:)`，用于在多线程情况下，去尝试请求一个递归锁，然后根据返回的布尔值，来做相应的处理。如代码清单12-2-1所示，是一个正常的递归锁调用过程：
-
-**代码清单12-2-1**
+`NSRecursiveLock`递归锁提供了一个方法`lock(before:)`，用于在多线程情况下，去尝试请求一个递归锁，然后根据返回的布尔值，来做相应的处理。如下代码所示，是一个正常的递归锁调用过程：
 
 ```swift
 let lock = NSRecursiveLock()
@@ -557,9 +492,7 @@ DispatchQueue.global().async {
 }
 ```
 
-在这个场景下，如果我们想另起一个线程，并且尝试去获取这个递归锁，则可以如代码清单12-2-2处理：
-
-**代码清单12-2-2**
+在这个场景下，如果我们想另起一个线程，并且尝试去获取这个递归锁，则可以如下代码处理：
 
 ```swift
 DispatchQueue.global().async {
@@ -577,9 +510,7 @@ DispatchQueue.global().async {
 
 当然这种情况下会失败，其输出如下所示。如果将`lock(before:)`中的时间设置长一点，则会打印出"lock befor date"。
 
-## 14
-
-### Swift 3移除Optional类型的比较操作
+## 14. Swift 3移除Optional类型的比较操作
 
 `Swift 3`已经移除了`Optional`类型的比较操作，这在[Swift evolution SE-0121: Remove Optional Comparison Operators](https://github.com/apple/swift-evolution/blob/master/proposals/0121-remove-optional-comparison-operators.md)这条中明确了这一点。
 
@@ -587,9 +518,7 @@ DispatchQueue.global().async {
 
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/14-1-1.png?raw=true)
 
-不过`Swift 3`中，由于泛型不支持条件一致性判断，即没有通用的方法来定义在比较nil和非nil值时，应该得到怎样的值，所以实际结果可能不是预期的。所以，在`Swift 3`中，如果去比较两个`Optional`值，会给出编译错误，如代码清单14-1-1所示。而这一比较在Swift 3之前是没有问题的。
-
-**代码清单14-1-1**
+不过`Swift 3`中，由于泛型不支持条件一致性判断，即没有通用的方法来定义在比较nil和非nil值时，应该得到怎样的值，所以实际结果可能不是预期的。所以，在`Swift 3`中，如果去比较两个`Optional`值，会给出编译错误，如下代码所示。而这一比较在Swift 3之前是没有问题的。
 
 ```swift
 let dic1 = [
@@ -607,13 +536,9 @@ dic1["middle"] < dic2["middle"]		// value of optional type 'String?' not unwrapp
 
 当然在SE-0121中也说了，等泛型更加成熟后，不排除会将这一特性再添加回来。
 
-## 15
+## 15. __attribute__((objc_requires_super))
 
-### __attribute__((objc_requires_super))
-
-Objective-C允许子类可以重写父类的方法。如果我们希望子类方法重写父类方法时必须使用super来调用父类的对应方法，则可以在方法声明后面添加clang的编译属性`objc_requires_super`。添加这一属性后，如果子类没有调用父类方法，则会给出一个编译警告，如代码清单15-1-1所示：
-
-**代码清单15-1-1**
+Objective-C允许子类可以重写父类的方法。如果我们希望子类方法重写父类方法时必须使用super来调用父类的对应方法，则可以在方法声明后面添加clang的编译属性`objc_requires_super`。添加这一属性后，如果子类没有调用父类方法，则会给出一个编译警告，如下代码所示：
 
 ```objc
 @interface Bird : NSObject
@@ -644,9 +569,7 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 @end
 ```
 
-这个属性只能用记类中的方法声明，而不能用于协议。另外，`Foundation`提供了一个对应的宏`NS_REQUIRES_SUPER`，定义如代码清单15-1-2所示：
-
-**代码清单15-1-2**
+这个属性只能用记类中的方法声明，而不能用于协议。另外，`Foundation`提供了一个对应的宏`NS_REQUIRES_SUPER`，定义如下代码所示：
 
 ```objc
 #ifndef NS_REQUIRES_SUPER
@@ -658,13 +581,11 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 #endif
 ```
 
-#### 参考
+### 参考
 
 1. [Attributes in Clang](http://clang.llvm.org/docs/AttributeReference.html#objc-requires-super)
 
-## 16
-
-### __attribute__((objc_runtime_name))
+## 16. __attribute__((objc_runtime_name))
 
 `Objective-C`在默认情况下是将类或协议的名字作为元数据名称(`metadata name`)，即如果我们打印一个对象的`class`方法，输出就是对象所属类的类名，如下图所示。
 
@@ -674,15 +595,12 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/16-1-2.png?raw=true)
 
-#### 参考：
+### 参考
 
 1. [Clang 5 documentation](http://clang.llvm.org/docs/AttributeReference.html#objc-runtime-name)
 2. [Clang Attributes 黑魔法小记](http://blog.sunnyxx.com/2016/05/14/clang-attributes/)
 
-
-## 17
-
-### Tagged Pointer
+## 17. Tagged Pointer
 
 苹果在64位ARM架构下，对`NSNumber`等小对象对象的存储做了优化，即使用`Tagged Pointer`技术。通过使用这种技术，`NSNumber`指针变量指向的值不再是单独存储在一块内存中，而是对指针本身做了特殊处理，如下图代码所示。
 
@@ -696,18 +614,14 @@ Objective-C允许子类可以重写父类的方法。如果我们希望子类方
 
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/17-1-3.png?raw=true)
 
-#### 参考
+### 参考
 
 1. [深入理解Tagged Pointer](http://www.infoq.com/cn/articles/deep-understanding-of-tagged-pointer)
 2. [WWDC 2013 Advanced in Objective-C](https://developer.apple.com/videos/play/wwdc2013/404/)
 
-## 21
+## 18. Extension Selector
 
-### Extension Selector
-
-在`Swift`中，我们可以使用`#selector`设置`target-action`模式中的`action`操作，如代码清单21-1-1所示：
-
-**代码清单21-1-1**
+在`Swift`中，我们可以使用`#selector`设置`target-action`模式中的`action`操作，如下代码所示：
 
 ```swift
 class ViewController: UIViewController {
@@ -731,9 +645,7 @@ class ViewController: UIViewController {
 
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/01/21-1-1.png?raw=true)
 
-不过，还有种更好的方式，就是直接扩展`Selector`结构体，如代码清单21-1-2所示，这样可以在使用时直接用`.buttonTapped`这种方式来引用，就像我们使用`.red`这样的`UIColor`属性一样简洁。
-
-**代码清单21-1-2**
+不过，还有种更好的方式，就是直接扩展`Selector`结构体，如下代码所示，这样可以在使用时直接用`.buttonTapped`这种方式来引用，就像我们使用`.red`这样的`UIColor`属性一样简洁。
 
 ```swift
 extension Selector {
@@ -757,16 +669,14 @@ class ViewController: UIViewController {
 }
 ```
 
-#### 参考：
+### 参考
 
 [Swift: Selector Syntax Sugar](https://medium.com/swift-programming/swift-selector-syntax-sugar-81c8a8b10df3#.md6860mmq)
 
 
-### typealias泛型闭包
+## 19. typealias泛型闭包
 
-在`Swift`中我们可以用`typealias`来为已经存在的类型重新定义名字的,通过命名可以使代码变得更加清晰。当然也可以给闭包类型定义一个新名字，给带有泛型的闭包重新定义名字的方式如代码清单21-2-1所示：
-
-**代码清单21-2-1**
+在`Swift`中我们可以用`typealias`来为已经存在的类型重新定义名字的,通过命名可以使代码变得更加清晰。当然也可以给闭包类型定义一个新名字，给带有泛型的闭包重新定义名字的方式如下代码所示：
 
 ```swift
 typealias Block<U> = (U, U) -> Bool
@@ -780,15 +690,11 @@ compare(number1: 10, number2: 20) {
 }
 ```
 
-## 22
-
-### Swift 3 #keyPath
+## 20. Swift 3 #keyPath
 
 在`Objective-C/Swift`中使用`KVC`或`KVO`总是需要格外小心，因为对于`key`或`keyPath`，我们使用的是字符串字面量来处理。这样在编译期无法检测我们的输入是否正确，或许我们会因为一时大意，多写了或少写了一个字符，或拼错了单词。而这个错误只能在运行时，程序崩溃时才能发现，很不爽的吧。
 
-为此，在`Swift 3`中引入了`#keyPath()`这个表达式，它接收`Object.property`形式的参数，并将其转换成字符串，如代码清单22-1-1所示。因为使用的是对象和属性的方式，所以在编译时，编译器能去检测这个表达式是否有效，从而避免了上面的问题。
-
-**代码清单22-1-1**
+为此，在`Swift 3`中引入了`#keyPath()`这个表达式，它接收`Object.property`形式的参数，并将其转换成字符串，如下代码所示。因为使用的是对象和属性的方式，所以在编译时，编译器能去检测这个表达式是否有效，从而避免了上面的问题。
 
 ```swift
 class Person: NSObject {
@@ -806,13 +712,11 @@ let chris = Person(firstName: "Chris")
 chris.value(forKeyPath: #keyPath(Person.firstName))
 ```
 
-#### 参考
+### 参考
 
 1. [Referencing Objective-C key-paths](https://github.com/apple/swift-evolution/blob/master/proposals/0062-objc-keypaths.md)
 
-## 23
-
-### Swift 3移除var关键字
+## 21. Swift 3移除var关键字
 
 `Swift 3`中移除了函数参数中的`var`关键字，[swift proposals SE-0003](https://github.com/apple/swift-evolution/blob/master/proposals/0003-remove-var-parameters.md)中的观点是`var`标记的参数只是本地复本会变化，不会回传给原始值，因此调用者并不会知道参数值的改变，实际上没有太大的实用性。
 
@@ -822,17 +726,13 @@ chris.value(forKeyPath: #keyPath(Person.firstName))
 2. `var`经常被混淆，以使值类型具有引用语义；
 3. 函数参数通常是不可重用的
 
-#### 参考
+### 参考
 
 1. [Removing var from Function Parameters](https://github.com/apple/swift-evolution/blob/master/proposals/0003-remove-var-parameters.md)
 
-## 24
+## 22. Swift 3中的AnyHashable
 
-### Swift 3中的AnyHashable
-
-在`Swift 3`的标准库中添加了`AnyHashable`这一新类型，其用途是在需要`Hash`值的集合中，可以混合使用多种`Hashable`类型。例如，字典的`key`值，其要求是`Hashable`类型，如果希望`key`值是任意实现了`Hashable`协议的类型，则在声明字典时，可以使用`AnyHashable`作为`key`的类型，如代码清单24-1-1所示：
-
-**代码清单24-1-1**
+在`Swift 3`的标准库中添加了`AnyHashable`这一新类型，其用途是在需要`Hash`值的集合中，可以混合使用多种`Hashable`类型。例如，字典的`key`值，其要求是`Hashable`类型，如果希望`key`值是任意实现了`Hashable`协议的类型，则在声明字典时，可以使用`AnyHashable`作为`key`的类型，如下代码所示：
 
 ```swift
 let description: [AnyHashable: Any] = [
@@ -849,7 +749,7 @@ print(description[AnyHashable(Set(["a", "b"]))]!)   // a set of strings
 
 早先，在`ObjC`与`Swift`混合编程中，`ObjC`的`NSDictionary`导入到`Swift`时，是转换成`[NSObject: AnyObject]`类型。使用`NSObject`作为`key`的类型，因为`NSObject`是最接近于`AnyObject`且实现了`Hashable`的类型。不过`Swift`希望在标准库中限制`AnyObject`的使用，而更多的使用`Any`，所以加入了`AnyHashable`类型。
 
-#### 参考
+### 参考
 
 1. [Add AnyHashable to the standard library](https://github.com/apple/swift-evolution/blob/master/proposals/0131-anyhashable.md)
 
