--- a/2017/02.md
+++ b/2017/02.md
@@ -1,21 +1,15 @@
 # 2017.02
 
-## 03
+## 1. 查看一个对象的类型是否为Optional
 
-### 查看一个对象的类型是否为Optional
-
-在`Swift`中，如果想在运行时判断一个对象的类型是不是可选类型，则可以使用`Mirror`，如代码清单3-1-1所示，所有的可选类型都将返回`optional`。
-
-**代码清单3-1-1**
+在`Swift`中，如果想在运行时判断一个对象的类型是不是可选类型，则可以使用`Mirror`，如下代码所示，所有的可选类型都将返回`optional`。
 
 ```swift
 let value: Int? = 3
 Mirror(reflecting: value).displayStyle		// optional
 ```
 
-`Mirror`的`displayStyle`属性的类型是`Mirror.DisplayStyle`，这是一个枚举类型，用于为`Mirror`的主体对象提供一种建议性的解析，其定义如代码清单3-1-2所示：
-
-**代码清单3-1-2**
+`Mirror`的`displayStyle`属性的类型是`Mirror.DisplayStyle`，这是一个枚举类型，用于为`Mirror`的主体对象提供一种建议性的解析，其定义如下代码所示：
 
 ```swift
 /// A suggestion of how a `Mirror`'s `subject` is to be interpreted.
@@ -43,9 +37,7 @@ public enum DisplayStyle {
 }
 ```
 
-枚举值范围之外的类型，其`Mirror`的`displayStyle`属性将返回`nil`，如代码清单3-1-3所示：
-
-**代码清单3-1-3**
+枚举值范围之外的类型，其`Mirror`的`displayStyle`属性将返回`nil`，如下代码所示：
 
 ```swift
 let value: Int = 20
@@ -55,9 +47,7 @@ let str: String = "30"
 Mirror(reflecting: str).displayStyle		// nil
 ```
 
-## 04
-
-### SwiftLint
+## 2. SwiftLint
 
 `realm`开源了一套`Swift`代码规范检测工具[SwiftLint](https://github.com/realm/SwiftLint)，它可以对代码做静态分析，以确定代码是否遵循所定制的规范(目前主要基于[Github的编码规范](https://github.com/github/swift-style-guide))。
 
@@ -67,13 +57,9 @@ SwiftLint目前有70+条[规则](https://github.com/realm/SwiftLint/blob/master/
 
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/02/04-1-1.png?raw=true)
 
-## 05
+## 3. Swift自定义操作符
 
-### Swift自定义操作符
-
-在`Swift`中，自定义操作符就是简单的二步：首先在全局使用`operator`关键字来声明操作符，同时用`prefix`、`infix`或`postfix`来声明操作符的位置；然后在所需要的类/结构体中实现操作符。如代码清单5-1-1所示：
-
-**代码清单5-1-1**
+在`Swift`中，自定义操作符就是简单的二步：首先在全局使用`operator`关键字来声明操作符，同时用`prefix`、`infix`或`postfix`来声明操作符的位置；然后在所需要的类/结构体中实现操作符。如下代码所示：
 
 ```swift
 postfix operator >?
@@ -95,9 +81,7 @@ extension MIType {
 1. `ASCII`字符中的`/, =, -, +, !, *, %, <, >, &, |, ^, ?, ~`
 2. `Unicode`中的`Mathematical Operators`, `Miscellaneous Symbols`和`Dingbats Unicode blocks`这些字符中的字符
 
-然后后面允许使用组合的`Unicode`字符。如代码清单5-1-2是以一个`Miscellaneous Symbols`开头的实现向量加法的操作符。
-
-**代码清单5-1-2**
+然后后面允许使用组合的`Unicode`字符。如下代码是以一个`Miscellaneous Symbols`开头的实现向量加法的操作符。
 
 ```swift
 infix operator ★+
@@ -122,18 +106,14 @@ vector.x		// 40.0
 vector.y		// 30.0
 ```
 
-#### 参考
+### 参考
 
 1. [The Swift Programming Language (Swift 4) -- Advanced Operators](https://developer.apple.com/library/content/documentation/Swift/Conceptual/Swift_Programming_Language/AdvancedOperators.html#//apple_ref/doc/uid/TP40014097-CH27-ID28)
 2. [The Swift Programming Language (Swift 4) -- Lexical Structure](https://developer.apple.com/library/content/documentation/Swift/Conceptual/Swift_Programming_Language/LexicalStructure.html#//apple_ref/doc/uid/TP40014097-CH30-ID418)
 
-## 06
+## 4. 自定义操作符中的.
 
-### 自定义操作符中的.
-
-在自定义操作符时，可以以dot(.)开头，这种情况下，操作符后面还可以包含其它的dot(.)，如代码清单6-1-1所示：
-
-**代码清单6-1-1**
+在自定义操作符时，可以以dot(.)开头，这种情况下，操作符后面还可以包含其它的dot(.)，如下代码所示：
 
 ```swift
 infix operator .+.
@@ -160,23 +140,17 @@ vector.y
 
 但如果操作符不是以`dot`开头，则后面不能再包含`dot`，如`operator +.+`这个声明会被看成是"`+`"操作符后面跟了个"`.+`"操作符。编译器会给出如下错误提示：
 
-**代码清单6-1-2**
-
 ```swift
 infix operator +.+		// error: operator with postfix spacing cannot start a subexpression
 ```
 
-#### 参考
+### 参考
 
 1. [The Swift Programming Language (Swift 4) -- Lexical Structure](https://developer.apple.com/library/content/documentation/Swift/Conceptual/Swift_Programming_Language/LexicalStructure.html#//apple_ref/doc/uid/TP40014097-CH30-ID418)
 
-## 07
+## 5. Swift打印对象的地址
 
-### Swift打印对象的地址
-
-在`Swift`中，我们可以使用`withUnsafePointer(to:_:)`函数来获取一个变量的指针，如代码清单7-1-1所示：
-
-**代码清单7-1-1**
+在`Swift`中，我们可以使用`withUnsafePointer(to:_:)`函数来获取一个变量的指针，如下代码所示：
 
 ```swift
 var x = 42
@@ -200,9 +174,7 @@ withUnsafePointer(to: &obj) {ptr in print(ptr)}
 
 需要注意的是，生成的指针的生命周期限定于闭包内部，不能将其指定给外部的变量。
 
-第二种打印变量的指针的方式如代码清单7-1-2所示：
-
-**代码清单7-1-2**
+第二种打印变量的指针的方式如下代码所示：
 
 ```swift
 var x = 42
@@ -226,17 +198,13 @@ printPointer(ptr: &obj)
 // 0x000000011a145688
 ```
 
-#### 参考
+### 参考
 
 1. [withUnsafePointer(to:_:)](https://developer.apple.com/reference/swift/2431879-withunsafepointer)
 
-## 08
+## 7. ArraySlice的用途
 
-### ArraySlice的用途
-
-`Swift`提供了`ArraySlice`来执行数组的切片操作。类似于其它语言中的切片(如Python)，`ArraySlice`对象复用了原始数组的存储结构，而不是新开辟一块内存区域来将数组片断的元素拷贝过来。因此，它能让我们快速高效地对大数组的片段执行操作。如代码清单8-1-1所示：
-
-**代码清单8-1-1**
+`Swift`提供了`ArraySlice`来执行数组的切片操作。类似于其它语言中的切片(如Python)，`ArraySlice`对象复用了原始数组的存储结构，而不是新开辟一块内存区域来将数组片断的元素拷贝过来。因此，它能让我们快速高效地对大数组的片段执行操作。如下代码所示：
 
 ```swift
 var array: [Int] = []
@@ -257,17 +225,15 @@ print(result)       // 79800
 
 `ArraySlice`与`Array`有相同的接口，所以通常可以在切片数组上执行与原始数组相同的操作。
 
-#### 参考
+### 参考
 
 1. [ArraySlice](https://developer.apple.com/reference/swift/arrayslice)
 
-### ArraySlice使用注意事项
+## 8. ArraySlice使用注意事项
 
 使用`ArraySlice`时，需要注意两点：
 
-* `ArraySlice`会维持对原始数组的一个强引用，而不仅仅是它所表示的片断。这样即使原始数组对象的生命周期结束了，也可能无法释放。所以不建议长期存储`ArraySlice`对象，仅用于临时操作。如代码清单8-2-1所示：
-
-**代码清单8-2-1**
+* `ArraySlice`会维持对原始数组的一个强引用，而不仅仅是它所表示的片断。这样即使原始数组对象的生命周期结束了，也可能无法释放。所以不建议长期存储`ArraySlice`对象，仅用于临时操作。如下代码所示：
 
 ```swift
 class MyClass {
@@ -299,9 +265,7 @@ class ViewController: UIViewController {
 
 ![8-1-1](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/02/08-2-1.png?raw=true)
 
-* 与`Array`不同的是，`ArraySlice`起始索引不一定是0，而是取决于其创建方式。一般是采用共享索引的方式，即`ArraySlice`对象的起始索引就是切片的开始位置，如代码清单8-2-2所示，切片是从100开始，所以`slice[100]`是OK的，而`slice[99]`会报越界错误。通常建议使用`startIndex`和`endIndex`来取代指定的索引值，如代码清单8-2-3所示。
-
-**代码清单8-2-2**
+* 与`Array`不同的是，`ArraySlice`起始索引不一定是0，而是取决于其创建方式。一般是采用共享索引的方式，即`ArraySlice`对象的起始索引就是切片的开始位置，如代码清单8-2-2所示，切片是从100开始，所以`slice[100]`是OK的，而`slice[99]`会报越界错误。通常建议使用`startIndex`和`endIndex`来取代指定的索引值，如下代码所示。
 
 ```swift
 var array: [Int] = []
@@ -316,20 +280,16 @@ slice[100]
 slice[99]       // fatal error: Index out of bounds
 ```
 
-**代码清单8-2-3**
-
 ```swift
 slice[slice.startIndex]         // 100
 slice[slice.endIndex - 1]       // 299
 ```
 
-#### 参考
+### 参考
 
 1. [ArraySlice](https://developer.apple.com/reference/swift/arrayslice)
 
-## 09
-
-### 尾调用优化
+## 9. 尾调用优化
 
 尾调用是指一个函数里的最后一个动作是一个函数调用的情形：即这个调用的返回值直接被当前函数返回。我们知道在函数调用时，会在内存中生成一个调用记录，即调用帧(`call frame`)，用于保存调用位置和内部变量等信息。而尾调用由于是函数的最后一步操作，所以可以不在调用栈上添加一个新的调用帧，而是直接更新外层函数的调用帧，这种处理方式即尾调用优化(`Tail Call Optimization, TCO`)。
 
@@ -337,19 +297,15 @@ slice[slice.endIndex - 1]       // 299
 
 一些语言会针对尾递归做一些[优化](http://www.ruanyifeng.com/blog/2015/04/tail-call.html)，但`Swift`不确保在所有情况下都做了优化。
 
-#### 参考
+### 参考
 
 1. [Does Swift implement tail call optimization? and in mutual recursion case?](http://stackoverflow.com/questions/24023580/does-swift-implement-tail-call-optimization-and-in-mutual-recursion-case)
 2. [Functional Swift: Tail Recursion Explained](https://www.natashatherobot.com/functional-swift-tail-recursion/)
 3. [尾调用](https://zh.wikipedia.org/wiki/%E5%B0%BE%E8%B0%83%E7%94%A8)
 
-## 10
+## 10. 多维下标
 
-### 多维下标
-
-我们通常看到的下标操作都是一维的，不过如果有需要，我们可以定义多维的下标操作，如代码清单10-1-1所示：
-
-**代码清单10-1-1**
+我们通常看到的下标操作都是一维的，不过如果有需要，我们可以定义多维的下标操作，如下代码所示：
 
 ```swift
 // 定义一个三维结构体
@@ -395,11 +351,9 @@ print(vectors[0, 0, 0])            // nil
 print(vectors[3, 4, 6])            // Optional(__lldb_expr_167.Vector3D<Swift.Int>(x: 3, y: 4, z: 6))
 ```
 
-### Swift中打印线程调用栈
+## 11. Swift中打印线程调用栈
 
-在`Swift 3`中，如果想打印线程的调用栈，可以简单的使用`Thread.callStackSymbols`，如代码清单10-2-1所示：
-
-**代码清单10-2-1**
+在`Swift 3`中，如果想打印线程的调用栈，可以简单的使用`Thread.callStackSymbols`，如下代码所示：
 
 ```swift
 for symbol in Thread.callStackSymbols {
@@ -419,9 +373,7 @@ for symbol in Thread.callStackSymbols {
 // 10  ???                                 0x0000000000000001 0x0 + 1
 ```
 
-如果想使用C函数`backtrace`，需要在`bridging header file`中导入`execinfo.h`头文件，然后如代码清单10-2-2所示，记得最后需要用`free`释放`symbols`。
-
-**代码清单10-2-2**
+如果想使用C函数`backtrace`，需要在`bridging header file`中导入`execinfo.h`头文件，然后如理代码所示，记得最后需要用`free`释放`symbols`。
 
 ```swift
 var callstack = [UnsafeMutableRawPointer?](repeating: nil, count: 128)
@@ -435,17 +387,13 @@ if let symbols = backtrace_symbols(&callstack, frames) {
 }
 ```
 
-#### 参考
+### 参考
 
 1. [how to call backtrace_symbols() in swift](http://stackoverflow.com/questions/40801545/how-to-call-backtrace-symbols-in-swift)
 
-## 11
+## 12. Swift RawRepresentable
 
-### Swift RawRepresentable
-
-`Swift`编译器自动为带有`raw type`的`enum`添加了`RawRepresentable`协议的实现。`RawRepresentable`协议的定义如代码清单11-1-1所示，它可以为某个类型定义一个关联的`raw value`，并在两者之间切换。代码清单11-1-2所示是一个典型的带`raw value`的枚举。
-
-**代码清单11-1-1**
+`Swift`编译器自动为带有`raw type`的`enum`添加了`RawRepresentable`协议的实现。`RawRepresentable`协议的定义如代码清单11-1-1所示，它可以为某个类型定义一个关联的`raw value`，并在两者之间切换。如下代码所示是一个典型的带`raw value`的枚举。
 
 ```swift
 public protocol RawRepresentable {
@@ -458,7 +406,6 @@ public protocol RawRepresentable {
 }
 ```
 
-**代码清单11-1-2**
 
 ```swift
 enum Counter: Int {
@@ -476,14 +423,12 @@ for i in 3...6 {
 // nil
 ```
 
-#### 参考
+### 参考
 
 1. [RawRepresentable](https://developer.apple.com/reference/swift/rawrepresentable)
 
 
-## 12
-
-### Swift在扩展中重写父类方法
+## 13. Swift在扩展中重写父类方法
 
 `Swift`在类的`extension`中，如果想重写父类的方法，会有以下两个限制(不局限于这两个，可能还有其它)：
 
@@ -492,15 +437,11 @@ for i in 3...6 {
 
 当然参数和返回值的类型如果是`String`、`Array`、`Dictionary`、`Set`这些也是OK的。
 
-## 13
-
-### Swift中操作符优先级
+## 14. Swift中操作符优先级
 
 `Swift 3`中改进了操作符的优先级及结合性的声明方式。
 
-在`Swift 3`之前，是使用`magic numbers`(魔数)的方式来声明操作符的优先级，如代码清单13-1-1所示：
-
-**代码清单13-1-1**
+在`Swift 3`之前，是使用`magic numbers`(魔数)的方式来声明操作符的优先级，如下代码所示：
 
 ```swift
 infix operator <~ {
@@ -509,9 +450,7 @@ infix operator <~ {
 }
 ```
 
-`magic numbers`总归是一个不好的东西，所以`Swift 3`改用`precedence groups`(优先级组)的方式来声明操作符的优先级，如代码清单13-1-2所示：
-
-**代码清单13-1-2**
+`magic numbers`总归是一个不好的东西，所以`Swift 3`改用`precedence groups`(优先级组)的方式来声明操作符的优先级，如下代码所示：
 
 ```swift
 precedencegroup Equivalence {
@@ -523,9 +462,7 @@ precedencegroup Equivalence {
 infix operator ~ : Equivalence
 ```
 
-系统为我们提供了一些默认的`precedence groups`，如代码清单13-1-3所示：
-
-**代码清单13-1-3**
+系统为我们提供了一些默认的`precedence groups`，如下代码所示：
 
 ```swift
 precedencegroup AssignmentPrecedence {
@@ -573,17 +510,13 @@ precedencegroup BitwiseShiftPrecedence {
 }
 ```
 
-#### 参考
+### 参考
 
 1. [Improved operator declarations](https://github.com/apple/swift-evolution/blob/master/proposals/0077-operator-precedence.md)
 
-## 14
+## 15. Never类型
 
-### Never类型
-
-之前有一条知识小集讲了可以用 `@noreturn` 用来修饰函数，以告诉编译器函数永远不返回值给调用方。如代码清单14-1-1是原来的`fatalError`的声明。
-
-**代码清单14-1-1**
+之前有一条知识小集讲了可以用 `@noreturn` 用来修饰函数，以告诉编译器函数永远不返回值给调用方。如下代码是原来的`fatalError`的声明。
 
 ```swift
 public func fatalError(_ message: @autoclosure () -> String = default, file: StaticString = #file, line: UInt = #line)
@@ -591,9 +524,7 @@ public func fatalError(_ message: @autoclosure () -> String = default, file: Sta
 
 不过作为函数类型的一个正交属性，它与函数声明的其它一些属性一起使用时会产生一些歧义，如与`@throws`和`non-void`返回值。如当成 `@throws` 一起使用时，可能会困惑指"无法正常返回，但可以抛出异常"，还是"完全无法返回"？
 
-所以现在使用Never枚举类型来替代`@noreturn`，以消除这种歧义，所以`fatalError`现在声明如代码清单14-1-2所示。这样() throws -> Never就好理解了，即"不能正常返回，但可能抛出异常"。
-
-**代码清单14-1-2**
+所以现在使用Never枚举类型来替代`@noreturn`，以消除这种歧义，所以`fatalError`现在声明如下代码所示。这样() throws -> Never就好理解了，即"不能正常返回，但可能抛出异常"。
 
 ```swift
 /// Unconditionally prints a given message and stops execution.
@@ -607,9 +538,7 @@ public func fatalError(_ message: @autoclosure () -> String = default, file: Sta
 public func fatalError(_ message: @autoclosure () -> String = default, file: StaticString = #file, line: UInt = #line) -> Never
 ```
 
-需要注意的是`Never`是一个空枚举，如代码清单14-1-3所示：
-
-**代码清单14-1-3**
+需要注意的是`Never`是一个空枚举，如下代码所示：
 
 ```swift
 /// The return type of functions that do not return normally; a type with no
@@ -626,11 +555,11 @@ public enum Never {
 }
 ```
 
-#### 参考
+### 参考
 
 1. [Remove @noreturn attribute and introduce an empty Never type](https://github.com/apple/swift-evolution/blob/master/proposals/0102-noreturn-bottom-type.md)
 
-### Uninhabited Types
+## 16. Uninhabited Types
 
 `Never`是一个空枚举，即没有有效的`case`。所以它是一种`uninhabited type`，即明显没有值的类型。`Swift`中，以下两种情况可以看成是`uninhabited type`：
 
@@ -641,17 +570,13 @@ public enum Never {
 
 另外，函数和元类型不能是`uninhabited type`。
 
-#### 参考
+### 参考
 
 1. [Remove @noreturn attribute and introduce an empty Never type](https://github.com/apple/swift-evolution/blob/master/proposals/0102-noreturn-bottom-type.md)
 
-## 16
+## 17. Repeated结构体
 
-### Repeated结构体
-
-`Swift`提供了一个`Repeated`结构体，用于表示一个所有元素都相同的集合。我们可以使用`repeatElement(_:count:)`函数来创建`Repeated`集合，如代码清单16-1-1所示：
-
-**代码清单16-1-1**
+`Swift`提供了一个`Repeated`结构体，用于表示一个所有元素都相同的集合。我们可以使用`repeatElement(_:count:)`函数来创建`Repeated`集合，如下代码所示：
 
 ```swift
 let repeatedName = repeatElement("test", count: 5)
@@ -667,15 +592,11 @@ for name in repeatedName {
 // test
 ```
 
-## 17
-
-### @autoclosure
+## 18. @autoclosure
 
 `Swift`中的`@autoclosure`还是一个很有意思的属性，它用于修饰函数中的闭包类型的参数，它主要有两个作用：
 
-* 将一个表达式自动封装成一个闭包，从而简化函数/方法的调用方式，如代码清单17-1-1所示；
-
-**代码清单17-1-1**
+* 将一个表达式自动封装成一个闭包，从而简化函数/方法的调用方式，如下代码所示；
 
 ```swift
 var customersInLine = ["Chris", "Alex", "Ewa", "Barry", "Daniella"]
@@ -700,13 +621,11 @@ serve2(curstomer: customersInLine.remove(at: 0))
 
 需要注意的是，封装后的闭包一般不带参数，而表达式的值就作为返回值。所以声明函数时闭包一般没有输入参数，即使有也会被忽略，实际上在写代码时，`Xcode`就是将`@autoclosure`参数当成一个普通的类型
 
-#### 参考
+### 参考
 
 1. [The Swift Programming Language (Swift 4) -- Closures](https://developer.apple.com/library/prerelease/content/documentation/Swift/Conceptual/Swift_Programming_Language/Closures.html#//apple_ref/doc/uid/TP40014097-CH11-ID543 https://developer.apple.com/swift/blog/?id=4)
 
-## 18
-
-### Autolayout Theory
+## 19. Autolayout Theory
 
 `View hierarchy`的`layout`可以定义为一系列的线性方程式。每个约束都表示一个方程式，大部分约束定义的是两个视图之间的关系，当然也可以是一个视图的两个不同的属性之间的关系，如高宽比。
 
@@ -718,13 +637,11 @@ serve2(curstomer: customersInLine.remove(at: 0))
 
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/02/18-1-2.png?raw=true)
 
-#### 参考
+### 参考
 
 1. [Auto Layout Guide](https://developer.apple.com/library/content/documentation/UserExperience/Conceptual/AutolayoutPG/AnatomyofaConstraint.html#//apple_ref/doc/uid/TP40010853-CH9-SW1)
 
-## 23
-
-### Swift Compile Warning
+## 20. Swift Compile Warning
 
 在`Swift`中，我们通常会用`FIXME/TODO/MARK`来做一些注释标注，这些标注在代码的`dropdown box`中能显示出来，如下图所示：
 
@@ -742,14 +659,12 @@ serve2(curstomer: customersInLine.remove(at: 0))
 
 可以看到，我们还能添加自定义的注释标签，如`WARNING/ERROR`。
 
-#### 参考
+### 参考
 
 1. [HOW TO HIGHLIGHT YOUR TODOS, FIXMES, & ERRORS IN XCODE](https://krakendev.io/blog/generating-warnings-in-xcode)
 
 
-## 27
-
-### iOS动画在系统中处理的2个阶段
+## 21. iOS动画在系统中处理的2个阶段
 
 接上一条。打包的`layer`和动画发送到`render server`后，会被反序列化成`render tree`。`Render server`将对动画的每一帧执行以下两步操作：
 
@@ -758,7 +673,7 @@ serve2(curstomer: customersInLine.remove(at: 0))
 
 这两步操作在动画期间不断重复。第一步操作由`CPU`来完成，第二步操作`GPU`来完成。两步操作都是由系统控制。
 
-### iOS动画应用内处理的4个阶段
+## 22. iOS动画应用内处理的4个阶段
 
 在iOS中，动画的执行主要分6个阶段，其中4个阶段是在应用内部处理的：
 
@@ -770,9 +685,7 @@ serve2(curstomer: customersInLine.remove(at: 0))
 这几个阶段都是由CPU来处理的，而且我们只能控制前面两个阶段，后两个阶段将由`Core Animation`来控制。
 
 
-## 28
-
-### 导致layer绘制的性能问题
+## 23. 导致layer绘制的性能问题
 
 `CALayer`的大部分属性都是通过`GPU`来绘制的。以下几类操作可能导致`layer`绘制的性能问题：
 
@@ -781,7 +694,7 @@ serve2(curstomer: customersInLine.remove(at: 0))
 3. **离屏渲染**：这个应该比较熟悉，诸如`layer`的圆角绘制、mask、阴影等操作都会导致离屏渲染，主要是因为需要为离屏绘制的图片分配额外的内存并在绘制上下文之间切换；
 4. **过大的图片**：如果图片大小超过GPU所支持的最大纹理大小，则在绘制前CPU需要去做预处理。
 
-#### 参考
+### 参考
 
 iOS Core Animation Advanced Techniques
 
