--- a/2017/09.md
+++ b/2017/09.md
@@ -1,14 +1,10 @@
 # 2017.09
 
-## 6
-
-### WKWebView检测首屏渲染时间
+## 1. WKWebView检测首屏渲染时间
 
 **作者**: [bestswifter](https://weibo.com/bestswifter)
 
 调研了一下`WKWebView`如何检测首屏渲染的时间，经过阅读`WebKit`源码和尝试，发现这样可以（需要调用私有方法，可以`base64`加密一下）：
-
-**代码清单6-1-1**
 
 ```objc
 // 注册
@@ -20,25 +16,19 @@
 }
 ```
 
-## 15
-
-### iOS 11 中 applicationDidEnterBackground:延迟执行
+## 2. iOS 11 中 applicationDidEnterBackground:延迟执行
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
 App 进入后台后, `applicationDidEnterBackground:`这个方法将延迟大约 1000 毫秒执行, 那么如果在进入后台时做一些任务，可能会达不到预期的效果。如果 App 刚进入应用立即启动，`applicationDidEnterBackground:` 和 `applicationWillEnterForeground:` 这两个方法都不会调用。如果有这么一个场景，进入后台后给应用设置手势密码，当 App 刚进入后就立即启动，那么 `applicationDidEnterBackground`：这个方法不会立即执行，从而手势密码也就不会设置。
 
-## 18 
-
-### JSManagedValue对底层Javascript值的引用
+## 3. JSManagedValue对底层Javascript值的引用
 
 使用`JSManagedValue`保存值时，需要注意其底层的`Javascript`值的使用。
 
 `JSManagedValue`添加了"条件保留(`conditional retain`)"机制为值提供自动内存管理，不过需要使用`JSVirtualMachine`的`addManagedReference(_:withOwner:)`方法。如果没有的话可能会导致一些问题，因为`JSManagedValue`行为类似于`ARC`的`weak`引用，所以当`Javascript`的垃圾收集器把`JSManagedValue`的底层`Javascript`值销毁时，`JSManagedValue`对象的`value`属性会自动变成`nil`。
 
 下面是我写的一个Bug：
-
-**代码清单18-1-1**
 
 ```javascript
 // action为局部变量
@@ -59,13 +49,11 @@ appApi.setMenu([{
 
 还是得多读读文档啊。
 
-#### 参考
+### 参考
 
 1. [JSManagedValue Reference](https://developer.apple.com/documentation/javascriptcore/jsmanagedvalue)
 
-## 20
-
-### iOS 11中的New Color Set
+## 4. iOS 11中的New Color Set
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -77,8 +65,6 @@ appApi.setMenu([{
 
 使用的时候，直接使用：
 
-**代码清单20-1-1**
-
 ```objc
 [UIColor colorNamed:name];
 ```
@@ -86,8 +72,6 @@ appApi.setMenu([{
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017/09/20-1-2.jpg?raw=true)
 
 但是这个方法只有在 iOS 11 以上系统有效，我们可以自己实现一个方法，或者把系统的方法替换掉。
-
-**代码清单20-1-2**
 
 ```objc
 @implementation UIColor (main)
@@ -125,8 +109,6 @@ appApi.setMenu([{
 
 使用时，直接调用我们自定义的方法即可：
 
-**代码清单20-1-3**
-
 ```objc
 static NSString* const k50E3C2Color = @"50E3C2";
 static NSString* const k10AEFFColor = @"10AEFF";
@@ -143,15 +125,11 @@ static NSString* const k10AEFFColor = @"10AEFF";
 }
 ```
 
-## 22
-
-### UITextFile和UITextView的textContentType属性新类型
+## 5. UITextFile和UITextView的textContentType属性新类型
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
 `UITextFile`和`UITextView`的`textContentType`属性新加了`UITextContentTypeUsername`和 `UITextContentTypePassword`类型，这样当你登录`App`时可以自动填充你的账号和密码，前提是你保存过密码到`Safari`或钥匙串。`App`可以和你的网站进行关联，如果在网站上登录过，可以自动填充密码和账户到你的`App`。
-
-**代码清单22-1-1**
 
 ```objc
 _textField.textContentType = UITextContentTypeUsername;
@@ -160,13 +138,11 @@ _textField.textContentType = UITextContentTypePassword;
 
 ![](https://github.com/southpeak/iOS-tech-set/blob/master/images/2017-09-22-1-1.jpg?raw=true)
 
-### 自动记住键盘类型
+## 6. 自动记住键盘类型
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
 自动记住你选择的键盘类型。比如在【密语】中，你和A聊天用英文，切换到英文键盘；和B聊天，切换到中文键盘；那么当你退出聊天后。与A再次聊天时，显示的是英文键盘，与B聊天显示的是中文键盘。你只需要在`UIViewController`中实现：
-
-**代码清单20-2-1**
 
 ```objc
 - (NSString *)textInputContextIdentifier
@@ -175,7 +151,7 @@ _textField.textContentType = UITextContentTypePassword;
 }
 ```
 
-### iPhone X屏幕基本信息
+## 7. iPhone X屏幕基本信息
 
 适配iPhone X时，需要了解一些屏幕的基本信息：
 
@@ -184,13 +160,11 @@ _textField.textContentType = UITextContentTypePassword;
 3. iPhone X屏幕的长宽比大约是***9:19.5***，iPhone 5~8的长宽比都是***9:16***；不过iPhone X与iPhone 6/6s/7/8的屏幕宽度是一样的；
 4. 大刘海，这应该是最直观的，导致状态栏被分割在刘海两侧
 
-#### 参考
+### 参考
 
 1. [How iOS Apps Adapt to the iPhone X Screen Size](https://medium.com/@hacknicity/how-ios-apps-adapt-to-the-iphone-x-screen-size-a00bd109bbb9)
 
-## 25
-
-### Xcode 9 支持开启多个模拟器
+## 8. Xcode 9 支持开启多个模拟器
 
 `Xcode 9`开始可以同时开启多个模拟器了。这样我们就可以同时看不同模拟器下App的显示效果。
 
@@ -204,14 +178,12 @@ _textField.textContentType = UITextContentTypePassword;
 
 在Xcode 9之前尝试同时打开多个模拟器，则需要一些`trick`方法，可以参考[How to Run Multiple iOS Simulator Instances Xcode 8.2](https://www.youtube.com/watch?v=0aS_zEYvQY4)
 
-#### 参考
+### 参考
 
 1. [What’s New in Xcode](https://developer.apple.com/library/content/documentation/DeveloperTools/Conceptual/WhatsNewXcode/xcode_9/xcode_9.html)
 2. [What’s New in Xcode 9: Top 5 features to look forward to.](https://medium.com/@guydaher/whats-new-in-xcode-9-top-5-features-to-look-forward-to-c2e64868270b)
 
-## 26
-
-### 使用Xcode自带的运行时工具发现代码中的漏洞
+## 9. 使用Xcode自带的运行时工具发现代码中的漏洞
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -267,9 +239,7 @@ for (int i = 0; i < 10; i++) {
 Variable 'value' is used uninitialized whenever 'if' condition is false
 ```
 
-## 27 
-
-### -warn-long-expression-type-checking标识
+## 10. -warn-long-expression-type-checking标识
 
 Swift的类型检测(`type-checker`)是编译时的一个性能瓶颈。
 
@@ -287,13 +257,11 @@ Swift的类型检测(`type-checker`)是编译时的一个性能瓶颈。
 
 另外，在Xcode 9之前可以使用`-warn-long-function-bodies`标识(Xcode 9仍然保留)，这个是警告哪个方法的类型检测超过阈值。可以尝试一下。
 
-#### 参考
+### 参考
 
 1. [Measuring Swift compile times in Xcode 9](https://www.jessesquires.com/blog/measuring-compile-times-xcode9/)
 
-## 28
-
-### 查看Swift函数/方法编译时间
+## 11. 查看Swift函数/方法编译时间
 
 我们可以使用`-debug-time-function-bodies`标识来查看Swift中每个函数/方法的编译时间。添加方式与`-warn-long-expression-type-checking`一样，在`Other Swift Flags`添加中`-Xfrontend -debug-time-function-bodies`。
 
@@ -309,14 +277,12 @@ Swift的类型检测(`type-checker`)是编译时的一个性能瓶颈。
 
 知道每个函数/方法的编译时间后，就可以有针对性的做优化了。
 
-#### 参考
+### 参考
 
 1. [Profiling your Swift compilation times](http://irace.me/swift-profiling)
 
 
-## 29
-
-### Xcode 9全屏模式下与模拟器分屏
+## 12. Xcode 9全屏模式下与模拟器分屏
 
 在`Xcode 9`之前，如果`Xcode`是全屏模式，那么使用模拟器时会有些不方便，看效果时需要切换屏幕（壕的话可以用双屏幕）。在`Xcode 9`中，添加了一个新功能，即在全屏模式下，可以和模拟器在同一屏幕上分屏操作，如下图所示。
 
