--- a/2017/10.md
+++ b/2017/10.md
@@ -1,8 +1,6 @@
 # 2017.10
 
-## 10
-
-### 查找未国际化的文字
+## 1. 查找未国际化的文字
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -16,9 +14,7 @@
 2. 直接在脚本所在的目录下，执行 `python unLocalizable.py`，这里的 `unLocalizable.py` 为脚本文件名。你可以在[这里](https://github.com/lefex/TCZLocalizableTool/blob/master/LocalToos/TCZLocalizable/unLocalizable.py)找到脚本文件。
 3. `BLACKDIRLIST` 你可以过滤掉和国际化无关的文件，比如某些第三方库。
 
-## 12
-
-### Xcode 9.1对崩溃提示的改进
+## 2. Xcode 9.1对崩溃提示的改进
 
 `Xcode 9.1`改进了Swift程序崩溃时的错误提示信息：在`debug`模式下运行程序，崩溃时将在编辑区的崩溃位置显示崩溃的原因，如下图所示：
 
@@ -37,11 +33,11 @@
 
 不过需要注意的是只有在程序入口是用Swift来写的应用中(`@UIApplicationMain/@NSApplicationMain`)才有效。
 
-#### 参考
+### 参考
 
 [Xcode 9.1 Improves Display of Fatal Errors](https://swift.org/blog/xcode-9-1-improves-display-of-fatal-errors/?utm_campaign=This%2BWeek%2Bin%2BSwift&utm_medium=email&utm_source=This_Week_in_Swift_146)
 
-### 删除 iOS 项目中未使用的图片
+## 3. 删除 iOS 项目中未使用的图片
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -61,13 +57,9 @@
 
 更好的阅读体验，请移步[更人性化的找出 iOS 中未使用的图](http://www.jianshu.com/p/dca77c25bf5d)
 
-## 13
+## 4. Dictionary的mapValue(_:)方法
 
-### Dictionary的mapValue(_:)方法
-
-Swift 4中的Dictionary字典新增了一个mapValue(_:)方法，来转换字典的值，同时保留key。如代码清单13-1-1所示。
-
-**代码清单13-1-1**
+Swift 4中的Dictionary字典新增了一个mapValue(_:)方法，来转换字典的值，同时保留key。如下代码所示：
 
 ```swift
 
@@ -84,9 +76,7 @@ print(result)
 
 其中original和result有相同的key，只是值不同，所以它们有相同的内部布局，不需要重新计算hash值，因此这种方式创建字典会比重新构建一个字典更快。
 
-## 16
-
-### 如何1秒找出国际化文件(en.lproj/Localizable.strings)语法错误
+## 5. 如何1秒找出国际化文件(en.lproj/Localizable.strings)语法错误
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -102,9 +92,7 @@ print(result)
 /en.lproj/Localizable.strings:line[11] : "HOM_Lefe" = "wsy“;
 ```
 
-## 18
-
-### 如何找出国际化文件(xxxx.strings)中未国际化的文件
+## 6. 如何找出国际化文件(xxxx.strings)中未国际化的文件
 
 **作者**: [Lefe_x](https://weibo.com/u/5953150140)
 
@@ -142,9 +130,7 @@ GRB_groupBuy
 
 可以从[这里](https://github.com/lefex/TCZLocalizableTool)找到这些脚本源码。
 
-## 26
-
-### Extract Function/Extract Method
+## 7. Extract Function/Extract Method
 
 当我们写代码写得飞起的时候，很可能在一个函数/方法里面堆积大量代码。当然，从美学的角度来讲，我们更希望写一些小而职责单一的函数/方法，所以这时候可以考虑重构。
 
@@ -161,15 +147,11 @@ Xcode为我们提供了一个简便的方法：`Extract Function/Extract Method`
 而且这个操作可以识别新方法需要哪些参数，是不是很方便？
 
 
-## 27
-
-### React Native中自定义iconfont图标库
+## 8. React Native中自定义iconfont图标库
 
 接上一条。
 
-使用`Unicode`码显得不直观，所以我们可以自定义图标库。`react-native-vector-icons`有一些内置的图标库，我们参考其创建方式，我们以Zocial为例，如代码清单27-1-1所示：
-
-**代码清单27-1-1**
+使用`Unicode`码显得不直观，所以我们可以自定义图标库。`react-native-vector-icons`有一些内置的图标库，我们参考其创建方式，我们以Zocial为例，如下代码所示：
 
 ```javascript
 import createIconSet from './lib/create-icon-set';
@@ -236,8 +218,33 @@ const setTabBarIcon = () => ({tintColor}) => {
 
 比使用Unicode直观多了。
 
-参考
+### 参考
 
 1. [Github react-native-vector-icons](https://github.com/oblador/react-native-vector-icons)
 2. [React Native与Iconfont](https://github.com/MrErHu/blog/issues/15)
+
+## 9. 判断是否在主队列运行
+
+在iOS中，如果我们要判断代码是否运行在主线程，可以直接使用`NSThread.isMainThread()`方法。但如果要判断是否运行在主队列(main queue)呢？
+
+需要注意的是，每个应用都只有一个主线程，但主线程中可能有多个队列，则不仅仅只有主队列，所以`NSThread.isMainThread()`方法并没有办法判断是否是在主队列运行。而GCD也没有提供相应的方法。那该如何处理呢？
+
+来看看React Native的处理方式：
+
+```objc
+BOOL RCTIsMainQueue()
+{
+  static void *mainQueueKey = &mainQueueKey;
+  static dispatch_once_t onceToken;
+  dispatch_once(&onceToken, ^{
+    dispatch_queue_set_specific(dispatch_get_main_queue(),
+                                mainQueueKey, mainQueueKey, NULL);
+  });
+  return dispatch_get_specific(mainQueueKey) == mainQueueKey;
+}
+```
+
+可以看到这里使用了`dispatch_queue_set_specific`和`dispatch_get_specific`。实际上是通过`dispatch_queue_set_specific`方法给主队列(main queue)关联了一个key-value对，再通过`dispatch_get_specific`从当前队列中取出`mainQueueKey`对应的value。如果是主队列，取出来的值就是写入的值，如果是其它主队列，取出的值就是另一个值或者是NULL。这样就OK了。
+
+当然，同样可以用类似的方式来设置其它的队列(设置全局并发队列无效)。
 
